mongo-tutorial/mongo-express.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongo-express
#   labels:
#     app: mongo-express
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mongo-express
#   template:
#     metadata:
#       labels:
#         app: mongo-express
#     spec:
#       containers:
#       - name: mongo-express
#         image: mongo-express
#         resources:
#           limits:
#             memory: "128Mi"
#             cpu: "500m"
#         ports:
#         - containerPort: 8081
#         env:
#         - name: ME_CONFIG_MONGODB_ADMINUSERNAME
#           valueFrom:
#             secretKeyRef:
#               name: mongodb-secret
#               key: mongo-root-username
#         - name: ME_CONFIG_MONGODB_ADMINPASSWORD
#           valueFrom: 
#             secretKeyRef:
#               name: mongodb-secret
#               key: mongo-root-password
#         - name: ME_CONFIG_MONGODB_SERVER
#           valueFrom: 
#             configMapKeyRef:
#               name: mongodb-configmap
#               key: database_url
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-bpe
  # namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-bpe
  template:
    metadata:
      labels:
        app: mongo-express-bpe
    spec:
      containers:
      - image: mongo-express
        imagePullPolicy: Always
        name: mongo-express
        ports:
          - containerPort: 8081
            name: webb
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
         tcpSocket:
           port: 8081
         initialDelaySeconds: 600
         periodSeconds: 10
        readinessProbe:
         tcpSocket:
           port: 8081
         initialDelaySeconds: 30
         periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    nodePort: 30000
